--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                         <input type="email" name="email" placeholder="Email Address">
                         <input type="text" name="subject"  placeholder="Subject">
                         <textarea name="message"  cols="30" rows="5" placeholder="Message"></textarea>
-                        <<a href="#" onclick="toggle()">PLACE ORDER</a>
+                        <a href="#" onclick="toggle()">PLACE ORDER</a>
                     </form>
                 </div>
             </div>
